Display warning for devices that don't have a default key

--- a/src/UI/Android/Resources/layout/RootView.axml
+++ b/src/UI/Android/Resources/layout/RootView.axml
@@ -69,6 +69,12 @@
                 android:gravity="center"
                 android:layout_marginTop="10dp"
                 android:text="Capabilities"/>
+            <TextView
+              style="@android:style/TextAppearance.Small"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:gravity="center"
+              local:MvxBind="Text SecureChannelStatusText" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
