Fix UI issue with address input

--- a/src/UI/WinUI/Views/RootView.xaml
+++ b/src/UI/WinUI/Views/RootView.xaml
@@ -56,7 +56,7 @@
                 SmallChange="1"
                 Minimum="0"
                 Maximum="126"
-                SpinButtonPlacementMode="Inline"
+                SpinButtonPlacementMode="Compact"
                 AcceptsExpression="False"/>
 
             <StackPanel Margin="20 80 20 10">
