Finish device discovery UI

--- a/src/UI/Windows/Views/Pages/ConnectPage.xaml
+++ b/src/UI/Windows/Views/Pages/ConnectPage.xaml
@@ -5,24 +5,47 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:pages="clr-namespace:OSDPBench.Windows.Views.Pages"
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+      xmlns:converters="clr-namespace:OSDPBench.Windows.Converters"
       mc:Ignorable="d" 
       d:DataContext="{d:DesignInstance pages:ConnectPage,
                                      IsDesignTimeCreatable=False}"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ConnectPage">
 
+    <Page.Resources>
+        <converters:StatusLevelConverter x:Key="StatusLevelConverter" />
+        <converters:StringToVisibilityConverter x:Key="StringToVisibilityConverter" />
+    </Page.Resources>
+
     <StackPanel 
         Orientation="Vertical"
         Margin="0 5">
-        <ui:CardExpander IsExpanded="true"
-            Margin="25 5"
-            Header="Serial Port Selection">
-            <Grid Margin="10 5">
+        <ui:CardExpander IsExpanded="True"
+            Margin="20 5"
+            ContentPadding="10 5">
+            <ui:CardExpander.Header>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" MinWidth="200" />
+                    </Grid.ColumnDefinitions>
+                    <ui:TextBlock
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        VerticalAlignment="Center"
+                        FontSize="16"
+                        FontTypography="Body"
+                        Text="Serial Port Selection" />
+                </Grid>
+            </ui:CardExpander.Header>
+            <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition MinWidth="200" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                    
                     <StackPanel Grid.Column="0" 
                         Orientation="Vertical">
                         <Label Content="Serial Port"
@@ -38,19 +61,100 @@
                            Command="{Binding ViewModel.ScanSerialPortsCommand}"/>
             </Grid>
         </ui:CardExpander>
-        <ui:CardExpander Margin=" 25 5"
-                         Header="Connect to PD">
-            <StackPanel Orientation="Vertical"
-                        Margin="10 5">
-                <Label Content="Baud Rate"
-                       Target="{Binding ElementName=BaudRateComboBox}" />
-                <ComboBox x:Name="BaudRateComboBox"
-                          ItemsSource="{Binding ViewModel.AvailableBaudRates }"
-                          SelectedItem="{Binding ViewModel.SelectedBaudRate}"/>
-                <ui:Button  Content="Discover"
-                           Margin="5 0"
-                           VerticalAlignment="Bottom"
-                           Command="{Binding ViewModel.DiscoverDeviceCommand}"/>
+        <ui:CardExpander IsExpanded="True"
+                         Margin=" 20 5"
+                         ContentPadding="10 5">
+            <ui:CardExpander.Header>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" MinWidth="200" />
+                    </Grid.ColumnDefinitions>
+                    <ui:TextBlock
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        VerticalAlignment="Center"
+                        FontSize="16"
+                        FontTypography="Body"
+                        Text="Connect to PD" />
+                    <ui:TextBlock
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        Visibility="{Binding Path=ViewModel.StatusLevel, Converter={StaticResource StringToVisibilityConverter}, ConverterParameter=Connected, Mode=OneWay}"
+                        FontSize="12"
+                        Foreground="{ui:ThemeResource TextFillColorSecondaryBrush}">
+                        <ui:TextBlock.Text>
+                            <MultiBinding StringFormat="Found device at address {0} running at a baud rate of {1}">
+                                <Binding Path="ViewModel.ConnectedAddress" />
+                                <Binding Path="ViewModel.ConnectedBaudRate" />
+                            </MultiBinding>
+                        </ui:TextBlock.Text>
+                    </ui:TextBlock>
+
+                    <ComboBox Name="ConnectionTypeComboBox"
+                        Grid.Row="0"
+                        Grid.RowSpan="2"
+                        Grid.Column="1"
+                        Margin="0,0,16,0"
+                        ItemsSource="{Binding ConnectionTypes }"
+                        SelectedValue="Discover"/>
+                </Grid>
+            </ui:CardExpander.Header>
+            <StackPanel Orientation="Vertical">
+                <Grid 
+                    Visibility="{Binding ElementName=ConnectionTypeComboBox, Path=SelectedValue, Converter={StaticResource StringToVisibilityConverter}, ConverterParameter=Discover, Mode=OneWay}">
+                    <StackPanel Orientation="Vertical">
+                        <ui:TextBlock
+                            Margin="10 5"
+                            HorizontalAlignment="Center"
+                            FontSize="16"
+                            FontTypography="Body"
+                            Text="Discovery will work properly with a single devices connected" />
+                        <StackPanel Orientation="Horizontal"
+                                    HorizontalAlignment="Center">
+                            <ui:Button  Content="Start Discovery"
+                                        Margin="10 5"
+                                        HorizontalAlignment="Center"
+                                        Command="{Binding ViewModel.DiscoverDeviceCommand}"/>
+                            <ui:Button  Content="Cancel Discovery"
+                                        Margin="10 5"
+                                        HorizontalAlignment="Center"
+                                        Command="{Binding ViewModel.DiscoverDeviceCancelCommand}"/>
+                        </StackPanel>
+                        
+                    </StackPanel>
+                </Grid>
+               
+                <Grid
+                    Visibility="{Binding ElementName=ConnectionTypeComboBox, Path=SelectedValue, Converter={StaticResource StringToVisibilityConverter}, ConverterParameter=Manual, Mode=OneWay}">
+                    <Label Content="Baud Rate"
+                           Target="{Binding ElementName=BaudRateComboBox}" />
+                    <ComboBox Name="BaudRateComboBox"
+                              ItemsSource="{Binding ViewModel.AvailableBaudRates }"
+                              SelectedItem="{Binding ViewModel.SelectedBaudRate}"/>
+                </Grid>
+
+                <TextBlock 
+                    FontSize="24"
+                    Margin="10 5"
+                    HorizontalAlignment="Center"
+                    TextAlignment="Center"
+                    TextWrapping="Wrap"
+                    Foreground="{Binding ViewModel.StatusLevel, Converter={StaticResource StatusLevelConverter}}"
+                    Text="{Binding ViewModel.StatusText}"/>
+                <TextBlock 
+                    FontSize="24"
+                    Margin="10 5"
+                    HorizontalAlignment="Center"
+                    TextAlignment="Center"
+                    TextWrapping="Wrap"
+                    FontWeight="Bold"
+                    Foreground="Red"
+                    Text="{Binding ViewModel.NakText}"/>
             </StackPanel>
         </ui:CardExpander>
     </StackPanel>
